// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should disable buttons and input when using disabled prop 1`] = `
<div
  role="group"
  class="mi-stepper"
>
  <button
    type="button"
    class="mi-stepper__minus mi-stepper__minus--disabled"
    aria-disabled="true"
  >
  </button>
  <input
    type="text"
    role="spinbutton"
    class="mi-stepper__input"
    disabled
    inputmode="decimal"
    autocomplete="off"
    aria-valuemax="Infinity"
    aria-valuemin="1"
    aria-valuenow="1"
    value="1"
  >
  <button
    type="button"
    class="mi-stepper__plus mi-stepper__plus--disabled"
    aria-disabled="true"
  >
  </button>
</div>
`;

exports[`should update input height and button size when using button-size prop 1`] = `
<div
  role="group"
  class="mi-stepper"
>
  <button
    type="button"
    style="width: 2rem; height: 2rem;"
    class="mi-stepper__minus mi-stepper__minus--disabled"
    aria-disabled="true"
  >
  </button>
  <input
    type="text"
    role="spinbutton"
    class="mi-stepper__input"
    style="height: 2rem;"
    inputmode="decimal"
    autocomplete="off"
    aria-valuemax="Infinity"
    aria-valuemin="1"
    aria-valuenow="1"
    value="1"
  >
  <button
    type="button"
    style="width: 2rem; height: 2rem;"
    class="mi-stepper__plus mi-haptics-feedback"
  >
  </button>
</div>
`;
